--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
     "zod": "^3.24.1"
